        PR middle-end/59049         * expmed.c (emit_store_flag): Fail for const-const comparison.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@204682 138bc75d-0d04-0410-961f-82ee72b054a4